--- a/CodeKeep/HomePage.html
+++ b/CodeKeep/HomePage.html
@@ -16,7 +16,7 @@
             <div class="menu">
                 <button class="menubtn">MENÚ</button>
                 <div class="contenidomenu">
-                    <a href="IncioSesion.aspx">Inicio de sesión</a>
+                    <a href="InicioSesion.aspx">Inicio de sesión</a>
                     <a href="RegistroCuenta.aspx">Registrar cuenta</a>
                 </div>
             </div>
